<resources>
    <string name="app_name">Rate Your Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rate your day !</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="day_title">A title</string>
    <string name="day_resume">What\'s up doc ?</string>
    <string name="hint_Title">Get your day a title</string>
    <string name="hint_date_text_view">01/01/0000</string>
    <string name="save_button_text">Save the day</string>
    <string name="save_the_day_good">Day saved !  Even if it was good enough already without saving !</string>
    <string name="save_the_day_bad">Day saved ! And i have to say you needed it hard !</string>
    <string name="share_title">Share</string>
    <string name="share_via">Share via</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General preferences</string>
    <string name="pref_title_social_recommendations">Activate the auto-sharing</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>4320</item>
        <item>5760</item>
        <item>10080</item>
        <item>0</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Use notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="default_time_value">21:30</string>
    <string name="notification_time_title">When do you want be notified ?</string>
    <string name="pref_title_autoshare_facebook">Auto-share to facebook</string>
    <string name="pref_title_autoshare_twitter">Auto-share to twitter</string>
    <string name="pref_title_autoshare_googleplus">Auto-share to Google+</string>
    <string name="pref_title_autoshare_activated">Activate auto-sharing</string>
    <string name="channel_name">Rate your day</string>
    <string name="channel_description">It\'s time to rate your day mate !</string>
    <string name="notification_default_star">You did rate your day ! Congrats !</string>
    <string name="notification_one_star">You did rate your day 1 stars! I hope tomorrow will be better !</string>
    <string name="notification_two_star">You did rate your day 2 stars! I hope tomorrow will be better !</string>
    <string name="notification_three_star">You did rate your day 3 stars! Congrats !</string>
    <string name="notification_four_star">You did rate your day 4 stars! Congrats !</string>
    <string name="notification_five_star">You did rate your day 5 stars ! Congrats !</string>
    <string name="action_entry_logs">Entry log</string>
    <string name="action_stats_diagrams">Diagrams</string>
    <string name="action_map">Map of your ratings</string>
    <string name="action_funny_stats">Interesting data</string>
    <string name="action_donate">Make a gift to the author</string>
    <string name="action_about_the_author">About the author</string>
    <string name="action_about_the_app">About the application</string>
    <string name="hashtag">#RateYourDay</string>
    <string name="monday">mon</string>
    <string name="tuesday">tue</string>
    <string name="wednesday">wed</string>
    <string name="thursday">thu</string>
    <string name="friday">fri</string>
    <string name="saturday">sat</string>
    <string name="sunday">sun</string>
    <string name="all_years_diagram_title">All years weeks</string>
    <string name="current_diagram_title">Current year weeks</string>
    <string name="all_years_months_diagram_title">All years months</string>
    <string name="current_months_diagram_title">Current year months</string>
    <string name="january">J</string>
    <string name="february">F</string>
    <string name="march">M</string>
    <string name="april">A</string>
    <string name="may">M</string>
    <string name="june">J</string>
    <string name="july">J</string>
    <string name="august">A</string>
    <string name="september">S</string>
    <string name="october">O</string>
    <string name="november">N</string>
    <string name="december">D</string>
    <string name="edit_button_text">EDIT</string>
    <string name="remove_button_text">REMOVE</string>
    <string name="last_week_title">Last week</string>
    <string name="favorite_day">Favorite day :</string>
    <string name="worst_day">Worst day :</string>
    <string name="last_month_title">Last month</string>
    <string name="current_month_title">Current month</string>
    <string name="favorite_month">Favorite month :</string>
    <string name="current_year_title">Current year</string>
    <string name="last_year_title">Last year</string>
    <string name="worst_month">Worst month :</string>
    <string name="all_time_title">All time</string>
    <string name="favorite_year">Favorite year :</string>
    <string name="worst_year">Worst year :</string>
    <string name="nothing_interesting">Sorry, but at the moment, i don\'t have any interesting datas to show you.\nKeep rating your days and i will soon have some to show you my friend !</string>
    <string name="nothing_interesting_title">Nothing interesting</string>
    <string name="entry_removed">Entry removed.</string>
    <string name="stat_removed">Panel will be hidden until next month.</string>
    <string name="stat_removed_title">Panel removal</string>
    <string name="stat_removed_cancel">Cancel</string>
    <string name="stat_removed_ok">OK</string>
    <string name="log_removed">This entry will be definitely removed, are you sure?</string>
    <string name="log_removed_title">Entry removal</string>
    <string name="log_removed_cancel">Cancel</string>
    <string name="log_removed_ok">Yes, go ahead !</string>
    <string name="undo">UNDO</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="custom_diagram_title">Custom diagram</string>
    <string name="cant_click">You must rate your day before describing it</string>
    <string name="nothing_main">No information on the selected day</string>
    <string name="cant_expand">You can\'t expand an empty card</string>
    <string name="custom_diagram_hint">Customize your own diagram by entering your own range of dates</string>
    <string name="donate_text">In order to help people, this application is free.\nIn order to make it lighter and usable by all Android devices, it\'s Ad free.\nYou can support the author of the application by making him a gift through Paypal :</string>
    <string name="donate_link">https://paypal.me/pools/c/83t6e5qfy7</string>
    <string name="about_the_autho_text">Hi ! My name is Fabien \'Mithraw\' Moraldo, i\'m born in the 1985, and i like doing things, yeah, just like you ! We are so much the same !\nNo kidding, i\'m just a regular dude, who will be happy if you enjoyed his work.\nBut must of all, i would be nobody without my friends, so a big thanks to the friends who supported me, and helped me testing the app :</string>
    <string name="about_the_autho_friends">- HowlBurn\n- Gio\n- Arita\n- Loki\n- Clifford1313</string>
    <string name="issue_google_sign_in">An error occurred during the connection to your google account</string>
    <string name="reconnect_google_sign_in">Reconnect</string>
    <string name="ok_google_sign_in">You are successfully connected to your google account</string>
    <string name="notificationIntentAction">com.mithraw.howwasyourday.notification</string>
    <string name="syncIntentAction">com.mithraw.howwasyourday.sync</string>
    <string name="expand_button_text">EXPAND</string>
    <string name="about_the_app_main_text">This application is open source and licenced under GPL3 you can find its source code here:</string>
    <string name="about_the_app_main_text2">You can find it\'s privacy policy here :</string>
    <string name="about_the_app_main_github"><u>https://github.com/fmoraldo-mithraw/rateyourday</u></string>
    <string name="about_the_app_main_privacy_policy"><u>http://www.rateyourday.ovh</u></string>
    <string name="sync_switch_text">Activate Google Drive Sync</string>
    <string name="notification_switch_text">Notify me to rate my day</string>
    <string name="first_use__text">Choose wisely :</string>
    <string name="first_use_title">First use screen</string>
    <string name="button_previous">previous</string>
    <string name="button_next">next</string>
    <string name="checkbox_never_show_tips">Never display any tips again</string>
    <string name="title_tips">Tips</string>
    <string name="external_storage_text">Save my images on my SD card</string>
    <string name="import_export_title">Import/Export your data</string>
    <string name="export_title">Export</string>
    <string name="export_data">You can retrieve all the data you entered in the application in different file formats :</string>
    <string name="export_data2">You can retrieve your photos :</string>
    <string name="CSV">.csv</string>
    <string name="database">.db</string>
    <string name="photo_archive">Photo archive</string>
    <string name="import_title">Import</string>
    <string name="import_data">You can import data in two formats :\n - CSV : \"datetime in millisec\";\"rate\";\"title\";\"text\"\n - Sqlite3 Database : same database that you did export on this screen.\nIn your texts, if you want any photo to be inside, you must insert [[[photoname.png]]]</string>
    <string name="import_data2">You can send your photos they must be in a zip archive with a parent directory named \"images-day\" with directories inside it named by the date they fit in(where month are starting at 0, January being so 00) YYYYMMDD :</string>
</resources>