<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:id="@+id/groupInfos" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_entry_logs"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/action_entry_logs" />
        <item
            android:id="@+id/nav_funny_stats"
            android:icon="@drawable/ic_lightbulb_outline"
            android:title="@string/action_funny_stats" />
        <item
            android:id="@+id/nav_diagrams"
            android:icon="@drawable/ic_menu_pie_chart"
            android:title="@string/action_stats_diagrams" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/action_map" />
    </group>
    <group android:id="@+id/groupSettings" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_import_export"
            android:icon="@drawable/ic_import_export"
            android:title="@string/import_export_title" />
    </group>
    <group android:id="@+id/groupAutor" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/action_donate" />
        <item
            android:id="@+id/nav_about_the_author"
            android:icon="@drawable/ic_satisfied"
            android:title="@string/action_about_the_author" />
        <item
            android:id="@+id/nav_about_the_app"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/action_about_the_app" />
    </group>

</menu>
